--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <html>
   <head>
     <script src="pong.js"></script>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <div class="score-board">
+      <h3>Score</h3>
+      <div class="score-card">
+        <p class="score-card__title">Computer:</p>
+        <p id="computerScore"></p>
+      </div>
+      <div class="score-card">
+        <p class="score-card__title">You:</p>
+        <p id="playerScore"></p>
+      </div>
+    </div>
   </body>
 </html>
