--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <script src="pong.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   </head>
   <body>
     <div class="score-board">
